Adding correct nvmrc

--- a/apps/pso/src/index.html
+++ b/apps/pso/src/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
-  <body>
+  <body h-screen overflow-hidden flex items-center justify-center" style="background: #edf2f7;">
     <oca-root></oca-root>
   </body>
 </html>
